--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -57,7 +57,7 @@ jobs:
         if: matrix.language == 'go'
         uses: actions/setup-go@v5
         with:
-          go-version: "1.23.4"
+          go-version: "1.23.10"
 
       # Настройка окружения для JavaScript/TypeScript
       - name: 🟢 Setup Node.js
@@ -95,7 +95,7 @@ jobs:
       - name: 🐹 Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.23.4"
+          go-version: "1.23.10"
 
       - name: 🔍 Run Go vulnerability check
         working-directory: ./auth
@@ -140,7 +140,7 @@ jobs:
         uses: trufflesecurity/trufflehog@main
         with:
           path: ./
-          base: main
+          base: ${{ github.event.before || 'HEAD~1' }}
           head: HEAD
           extra_args: --debug --only-verified
 
