feat: Phase 1 - Critical security fixes and database schema improvements
**Security Improvements:**
- Created Docker Secrets infrastructure (secrets/ directory)
- Migrated PostgreSQL password to Docker Secrets
- Updated .gitignore to protect secrets while allowing .example files
- Added comprehensive secrets/README.md documentation

**Database Fixes:**
- Fixed PostgreSQL schema: added missing columns to 'document' table
  - created_at (TIMESTAMP)
  - updated_at (TIMESTAMP)
  - meta (JSONB)
- Eliminated 'column does not exist' errors in logs

**Configuration Updates:**
- compose.yml: Added secrets section (lines 1235-1260)
- compose.yml: Updated db service to use Docker Secrets
- .gitignore: Allow .example files, protect *.txt secrets
- .gitignore: Added env/*.backup-* pattern

**Testing:**
- All 30 services running (27/30 healthy)
- PostgreSQL working with Docker Secrets
- No database errors in logs
- Validated compose.yml configuration

**Backups Created:**
- Configuration: .config-backup/phase1-backup-20251030-102345/
- Database: .config-backup/db-backup-phase1-20251030-102347.sql (92MB)

**Known Limitations:**
- OpenWebUI DATABASE_URL still in env file (requires custom entrypoint)
- API keys migration planned for Phase 2

**Next Steps:**
- Phase 2: Complete migration to Docker Secrets (6-8 hours)
- Custom entrypoint for OpenWebUI
- LiteLLM and MCP Server secrets migration

Closes: Phase 1 of project audit action plan
See: docs/reports/phase1-critical-fixes-report-20251030.md

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,16 @@
 # ===================================================================
 # ПЕРЕМЕННЫЕ ОКРУЖЕНИЯ И СЕКРЕТЫ
 # ===================================================================
-.env*
+.env
+.env.local
+.env.*.local
 env/*.env
-secrets/
+!env/*.example
+!env/*.template
+env/*.backup-*
+secrets/*.txt
+!secrets/*.example
+!secrets/README.md
 *.key
 *.pem
 *.p12
@@ -41,7 +48,7 @@ yarn-error.log*
 .venv/
 venv/
 .env/
-env/
+# env/ - УДАЛЕНО: конфликтует с директорией env/ проекта
 __pycache__/
 *.py[cod]
 *$py.class
